Rename and fixes